Bug 45444 - Compilation error with git 6386f80dbd6f1230abf16fa5ac65dc0dca70033a
Summary: Compilation error with git 6386f80dbd6f1230abf16fa5ac65dc0dca70033a
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Mesa core (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: mesa-dev
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-01-31 06:15 UTC by Kevin DeKorte
Modified: 2012-09-27 23:18 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Kevin DeKorte 2012-01-31 06:15:56 UTC
./autogen.sh --prefix=/usr --libdir=/usr/lib64 --with-dri-drivers="" --with-gall
ium-drivers=r600,swrast --enable-gallium-egl --enable-openvg --enable-gles1 --en
able-gles2 --enable-texture-float --enable-vdpau --enable-xvmc --enable-osmesa -
-enable-xorg --enable-texture-float

I get this error when compiling mesa today, it worked fine yesterday.


gmake[4]: Entering directory `/home/kdekorte/git/mesa/src/gallium/state_trackers/vdpau'
gcc -c -I. -I../../../../src/gallium/include -I../../../../src/gallium/auxiliary -I../../../../src/gallium/drivers   -I../../../../src/gallium/winsys/g3dvl -g -O2 -Wall -std=c99 -Werror=implicit-function-declaration -Werror=missing-prototypes -fno-strict-aliasing -fno-builtin-memcmp -g -O2  -fPIC  -DUSE_X86_64_ASM -D_GNU_SOURCE -DPTHREADS -DTEXTURE_FLOAT_ENABLED -DHAVE_POSIX_MEMALIGN -DUSE_XCB -DGLX_INDIRECT_RENDERING -DGLX_DIRECT_RENDERING -DUSE_EXTERNAL_DXTN_LIB=1 -DIN_DRI_DRIVER -DHAVE_ALIAS -DHAVE_MINCORE -DHAVE_LIBUDEV -DHAVE_XCB_DRI2 -DXCB_DRI2_CONNECT_DEVICE_NAME_BROKEN -DHAVE_XEXTPROTO_71 -D__STDC_CONSTANT_MACROS -DHAVE_LLVM=0x0209 -fvisibility=hidden -DVER_MAJOR=1 -DVER_MINOR=0  -I/usr/include   -D_GNU_SOURCE -D__STDC_LIMIT_MACROS -D__STDC_CONSTANT_MACROS preemption.c -o preemption.o
preemption.c:34:6: error: no previous prototype for ‘vlVdpPreemptionCallback’ [-Werror=missing-prototypes]
preemption.c:42:11: error: no previous prototype for ‘vlVdpPreemptionCallbackRegister’ [-Werror=missing-prototypes]
cc1: some warnings being treated as errors
Comment 1 Christian König 2012-01-31 08:04:00 UTC
Already investigating, looks like somebody added "-Werror=missing-prototypes" to the default mesa build options.

But currently even the gallium dri drivers won't compile for me.
Comment 2 Emeric Grange 2012-01-31 08:11:57 UTC
Seems like #include "vdpau_private.h" is missing inside src/gallium/state_trackers/vdpau/preemption.c ?
Comment 3 Christian König 2012-01-31 08:13:54 UTC
That was a one liner. Fix pushed to master.

Christian.
Comment 4 Matt Turner 2012-09-27 23:18:13 UTC
And 8 months later someone notices this nondescript bug an closes it.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.