src/gallium/state_trackers/vdpau/preemption.c
@@ -26,6 +26,7 @@
  **************************************************************************/
 
 #include <vdpau/vdpau.h>
+#include "vdpau_private.h"
 
 /**
  * A callback to notify the client application that a device's display has
